--- a/src/app/encryption-image-text/encryption-image-text.component.html
+++ b/src/app/encryption-image-text/encryption-image-text.component.html
@@ -1,4 +1,4 @@
-<div class="card-container">
+<div loadingMask [isLoading]="(isDecrypting || isEncrypting)" class="card-container">
   <mat-card class="card">
     <mat-card-header>
       <mat-card-title>Image to Text Encryption</mat-card-title>
