--- a/src/app/encryption-text-text/encryption-text-text.component.html
+++ b/src/app/encryption-text-text/encryption-text-text.component.html
@@ -8,8 +8,8 @@
     <mat-card-content>
       <div class="card-content-container">
         <app-select-key></app-select-key>
-        <text-input title="Plain Text" (bindValueChange)="encrypt($event)" [bindValue]="plainText"></text-input>
-        <text-input title="Encrypted Text" (bindValueChange)="decrypt($event)" [bindValue]="encryptedText"></text-input>
+        <text-input title="Plain Text" (bindValueChange)="encrypt($event)" [bindValue]="plainText" [isLoading]="waitDecrypt"></text-input>
+        <text-input title="Encrypted Text" (bindValueChange)="decrypt($event)" [bindValue]="encryptedText" [isLoading]="waitInput"></text-input>
       </div>
     </mat-card-content>
   </mat-card>
