--- a/src/app/loader/loader.component.html
+++ b/src/app/loader/loader.component.html
@@ -1,3 +1,3 @@
 <div class="loadWrapper" *ngIf="loader">
-    <mat-spinner style="align-self: center;"></mat-spinner>
+    <mat-spinner [diameter]="50" style="align-self: center;"></mat-spinner>
 </div>
