auto focus & fix bug

--- a/src/app/dashboard/dialog-confirm-del.html
+++ b/src/app/dashboard/dialog-confirm-del.html
@@ -2,6 +2,6 @@
 <div mat-dialog-actions>
   <div style="display: flex; flex-direction: row; width: 100%;">
     <button mat-button style="width: 100%;" (click)="onNoClick()">Cancel</button>
-    <button mat-button style="width: 100%;" (click)="confirm()">Confirm</button>
+    <button mat-button cdkFocusInitial style="width: 100%;" (click)="confirm()">Confirm</button>
   </div>
 </div>
