--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -12,6 +12,9 @@
         </div>
         <div class="card-content-line"><span>Github Repo: </span> <span><a
               href="https://github.com/WetABQ/AESChat">https://github.com/WetABQ/AESChat</a></span></div>
+        <div class="card-content-line"><span>Build Date: </span> <span>
+          <!-- {{getVersion()}} -->
+          </span></div>
       </div>
     </mat-card-content>
   </mat-card>
