--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -13,7 +13,7 @@
         <div class="card-content-line"><span>Github Repo: </span> <span><a
               href="https://github.com/WetABQ/AESChat">https://github.com/WetABQ/AESChat</a></span></div>
         <div class="card-content-line"><span>Build Date: </span> <span>
-            <a href="https://aeschat.ml:19145/buildtime.txt">buildtime.txt</a></span></div>
+            <a href="./buildtime.txt">buildtime.txt</a></span></div>
       </div>
     </mat-card-content>
   </mat-card>
