--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -8,10 +8,10 @@
       <div class="card-content-container">
         <div class="card-content-line"><span>State: </span> <span
             class="label-orange mat-elevation-z2">Developing</span></div>
-        <div class="card-content-line"><span>Author: </span> <span class="label-indigo mat-elevation-z2"> WetABQ</span>
+        <div class="card-content-line"><span>Author: </span> <span class="label-indigo mat-elevation-z2">WetABQ</span>
         </div>
         <div class="card-content-line"><span>Github Repo: </span> <span><a
-              href="https://github.com/WetABQ/AESChat">https://github.com/WetABQ/AESChat</a></span></div>
+              href="https://github.com/SDLMoe/AESChat">https://github.com/SDLMoe/AESChat</a></span></div>
         <div class="card-content-line"><span>Build Date: </span> <span>
             {{buildtime}}</span></div>
       </div>
